fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  margin-bottom: 25px;
 }
 
 .App-header {
@@ -11,8 +12,13 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  margin-bottom: 25px;
 }
 
 .add-btn {
-  margin: 20px;
+  margin-bottom: 25px;
+}
+
+.btn {
+  margin: 10px;
 }
